# PeleGrit

./: .gitignore  README.md
TPLs/cmake/Modules/: Findkokkos.cmake
example/Cantera/decane_debug/: mechanism.cti  transport.py
example/CudaCode/: simple.cu  timeinte.cu
example/PeleCode/: GNUmakefile  Make.package  SprayParticles.H  SprayParticles.cpp
scripts/: build_summit.sh  build_tulip.sh  build_ubuntu.sh  installKokkos.sh  summit_env  tulip_env  ubuntu_env
src/: CMakeLists.txt  Dust_Pele.h  Fuel.h  GaussianDeposit.h  GritPeleSprayInterface.C  GritPeleSprayInterface.cpp  GritPeleSprayInterface.h  LagrangeInterp.h  ParallelforTest.C  ParallelforTest.cpp  PeleSprayParticleClass.h  Spray_Pele.h  Yarn.h
